--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,5 +10,9 @@
 			"js": ["content_script.js"]
 		}
 	],
+	"web_accessible_resources": ["inject.js"],
+	"browser_action": {
+		"default_popup": "popup.html"
+	},
 	"manifest_version": 2
 }
