--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,7 +6,7 @@
 	"icons": {},
 	"content_scripts": [
 		{
-			"matches": ["https://open.spotify.com/*"],
+			"matches": ["*://*/*"],
 			"js": ["content_script.js"]
 		}
 	],
