--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,13 @@
 {
 	"name": "Loopy Goopy",
-	"description": "",
-	"version": "0.0.1",
+	"description": "Practice tool that finds audio/video tags and allows you to loop or control speed.",
+	"version": "1.0.0",
 	"permissions": ["storage"],
-	"icons": {},
+	"icons": {
+		"16": "loopy_goopy_full.png",
+		"48": "loopy_goopy_full.png",
+		"128": "loopy_goopy_full.png"
+	},
 	"content_scripts": [
 		{
 			"matches": ["*://*/*"],
@@ -12,7 +16,8 @@
 	],
 	"web_accessible_resources": ["inject.js"],
 	"browser_action": {
-		"default_popup": "popup.html"
+		"default_popup": "popup.html",
+		"default_icon": "loopy_goopy_full.png"
 	},
 	"manifest_version": 2
 }
