--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,7 +10,7 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["*://*/*"],
+			"matches": ["*://open.spotify.com/*", "*://*.youtube.com/*"],
 			"js": ["content_script.js"]
 		}
 	],
