--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,32 +1,26 @@
 {
-	"name": "Loopy Goopy",
-	"description": "Practice tool that finds audio/video tags and allows you to loop or control speed.",
-	"version": "1.2.0",
-	"permissions": ["storage"],
-	"icons": {
-		"16": "loopy_goopy_full.png",
-		"48": "loopy_goopy_full.png",
-		"128": "loopy_goopy_128.png"
-	},
-	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
-	},
-	"content_scripts": [
-		{
-			"matches": [
-				"https://dcep93.github.io/moviedate/*",
-				"https://open.spotify.com/*",
-				"https://www.youtube.com/*",
-				"file:///*"
-			],
-			"js": ["content_script.js"]
-		}
-	],
-	"web_accessible_resources": ["inject_spotify.js"],
-	"browser_action": {
-		"default_popup": "popup.html",
-		"default_icon": "loopy_goopy_full.png"
-	},
-	"manifest_version": 2
+  "name": "Loopy Goopy",
+  "description": "Practice tool that finds audio/video tags and allows you to loop or control speed.",
+  "version": "1.2.0",
+  "permissions": ["storage"],
+  "icons": {
+    "16": "loopy_goopy_full.png",
+    "48": "loopy_goopy_full.png",
+    "128": "loopy_goopy_128.png"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://www.youtube.com/*", "file:///*"],
+      "js": ["content_script.js"]
+    }
+  ],
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": "loopy_goopy_full.png"
+  },
+  "manifest_version": 2
 }
